<resources>
    <string name="cuarentinistas">Cuarentinistas</string>
    <string name="name">Name</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="ultimos_movimientos">Ultimos Movimientos</string>
    <string name="mis_cuentas">Mis Cuentas</string>
    <string name="realizar_transferencia">Realizar Transferencia</string>
    <string name="mis_inversiones">Mis Inversiones</string>
    <string name="realizar_inversion">Realizar Inversion</string>
    <string name="realizar_inversiones">Realizar Inversiones</string>
    <string name="json_rest_get_error">NO SE PUDO OBTENER UN OBJETO JSON MEDIANTE LA LLAMADA GET</string>
    <string name="get_error">Error al realizar la llamada GET del servicio REST</string>
    <string name="verificar_internet_rest">Verifique su conexion a internet o el estado del servicio REST</string>
    <string name="bono">Bono</string>
    <string name="detalle">Detalle</string>
    <string name="importe">Importe</string>
    <string name="nombreBono">nombre_bono</string>
    <string name="editNombre">Nombre</string>
    <string name="editApellido">Apellido</string>
    <string name="editDireccion">Direccion</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
</resources>