<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">


    <EditText
        android:id="@+id/editDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:autofillHints="Nueva Direccion"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/editDireccion"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/idGuardar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/idGuardar" />

    <TextView
        android:id="@+id/idNombre"
        android:layout_width="190dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/nombre"
        android:textSize="30dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/idApellido"
        android:layout_width="190dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:text="@string/apellido"
        android:textSize="30dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <Button
        android:id="@+id/idGuardar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="actualizarDireccion"
        android:text="Guardar Cambio"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDireccion"
        app:layout_constraintVertical_bias="0.181" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="134dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_placeholder"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:layout_marginTop="440dp"
        android:gravity="center"
        android:text="@string/editDireccion"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editDireccion"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/editDireccion"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:layout_marginTop="328dp"
        android:gravity="center"
        android:text="@string/editApellido"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/idApellido"
        app:layout_constraintStart_toStartOf="@+id/idApellido"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:layout_marginTop="188dp"
        android:gravity="center"
        android:text="@string/editNombre"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/idNombre"
        app:layout_constraintStart_toStartOf="@+id/idNombre"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>